pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingFunctionType1ParameterListDelimiter.pkl
f: (String -> String
res1 = 42
